...
                        android:padding="4dp"
                        app:srcCompat="@drawable/search_icon"
                        tools:srcCompat="@drawable/search_icon" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/cartBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/grey_background"
                    android:padding="12dp"
                    app:srcCompat="@drawable/basket"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bestFoodView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
...
