...
                android:textAlignment="center"
                android:textColor="@color/blue_gray"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false" />

            <LinearLayout
                android:layout_width="match_parent"
...
